[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"

[dependencies.wesl]
git = "https://github.com/wgsl-tooling-wg/wesl-rs"
branch = "main"
features = ["naga-ext"]

[build-dependencies.wesl]
git = "https://github.com/wgsl-tooling-wg/wesl-rs"
branch = "main"
features = ["naga-ext"]